fixed menu  overlfow on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 nav{
-    position: sticky;
+    /*position: sticky;*/
     top:0;
     width: 100%;
     display: flex;
@@ -71,20 +71,23 @@ nav{
         width:60%;
         z-index:999;
     }
-    .intro{
-        padding-left: 10%;
-        padding-right:10%;
+    html,body{
+        overflow-x:hidden;
+    }
+    body{
+        
+        position: relative;
     }
     
 }
 @media screen and (max-width:768px){
     body{
+        max-width: 100vw;
         overflow-x: hidden;
     }
     
     .nav-links{
         position: absolute;
-        z-index: 999; /*Ser till att menyn visas överst*/
         right:0px;
         height:92vh;
         top:8vh;
